main.css
#alarm-clock {
    width: 400px;
    height: 160px;
    border: 2px solid black;
    border-radius: 10px;
    background-color: white;
    display: flex;
    align-items: center;
    justify-content: center;
}

#countdown-clock {
    font-size: 96px;
    font-weight: bold;
}


form {

    width: 200px;
    font-size: 18px;
  }

  form select {
    height: 40px;
  }

  form button {
    height: 40px;
    width: 60px;
  }

  #location {
    text-align: center;
    font-size: 100px;
    color: rgb(219, 207, 207);
    height: auto;
  }

  body {
    display: grid;
    grid-template-rows: auto auto auto !important;
  }

  #alarm-clock {
    grid-row: 2;
    margin: 0 auto;
    padding-top: 5%;
  }

  #location {
    grid-row: 1;
    margin: 0 auto;
  }

  #reasons {
    grid-row: 3;
    display: grid;
    grid-template-rows: auto auto;
    margin: 0 auto;
    padding-top: 10%;
  }

  select {
    grid-row: 1;
  }

  #submit {
    grid-row: 1;
  }

  #res {
    grid-row: 2;
    border: 3px solid black;
    background-color: darkred; 
    border-radius: 5px;  
    visibility: hidden;
  }

